--- a/Assignment-210521/X_p352_Practice6/app/build.gradle
+++ b/Assignment-210521/X_p352_Practice6/app/build.gradle
@@ -7,9 +7,9 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.cookandroid.p352_practice6"
+        applicationId "com.example.p352_practice6"
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
